# flask-api-demo

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  docker-compose.yml  docker_build.sh  init.sh  init_db.sh  init_project.sh  pyproject.toml  requirements.txt
conf/: supervisor.conf  supervisor.ini  uwsgi.ini
src/: .flaskenv  manage.py  wsgi.py
src/app/: __init__.py  config.py  uwsgi.py  webapp.py  wsgi.py
src/app/api/: __init__.py  admin.py  book.py  file.py  job.py  poi.py  user.py
src/app/api/api_docs/admin/: add_user.yml  create_role.yml  delete_role.yml  delete_user.yml  get_auths.yml  get_roles.yml  get_users.yml  modify_user_password.yml  set_role_auth.yml  set_user_role.yml  update_role.yml
src/app/api/api_docs/book/: delete_book.yml  get_book.yml
src/app/api/api_docs/user/: get_auths.yml  get_info.yml  login.yml  modify_password.yml  register.yml
src/app/api/v1/: __init__.py  user.py
src/app/form/: __init__.py  admin.py  book.py  file.py  job.py  poi.py  user.py
src/app/forms/: __init__.py  admin.py  base.py  user.py
src/app/job/: __init__.py
src/app/model/: __init__.py  book.py  poi.py  user.py
src/app/models/: __init__.py  base.py  book.py  user.py
src/app/openapi/: __init__.py
src/app/openapi/templates/: index.html  redoc.html  swag.html
src/app/rq/: __init__.py  queue.py
src/app/specs/: __init__.py  book.py
src/app/utils/: __init__.py  enums.py  exceptions.py  http_basicauth.py  jwt.py  jwt_tools.py  redprint.py  response.py
src/app/validators/: __init__.py  base.py  forms.py
src/tests/: test.py
